<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="5dp"
    android:background="@color/list_header_background_2">
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/list_small_text_size"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/reserve_date" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/list_small_text_size"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/call_number" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/list_small_text_size"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/volume_number" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/list_small_text_size"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/ready_date" />
    
    <Button
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_btn_height"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:background="@drawable/btn_orange_background"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/all" />

</LinearLayout>