<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    
	    <LinearLayout 
	        android:id="@+id/main_content"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="15dp">
	        
	        <EditText
	            android:id="@+id/memberId"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" 
	            android:hint="@string/member_id" />
	        
	        <EditText
	            android:id="@+id/password"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:inputType="textPassword"
	            android:hint="@string/password" />
	        
	        <CheckBox 
	            android:id="@+id/remember"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:text="@string/remember_password" />
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginTop="10dp">
	            
	            <Button
	                android:id="@+id/loginBtn"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_marginRight="10dp"
	                android:text="@string/login" />
	            
	            <Button
	                android:id="@+id/resetBtn"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_marginLeft="10dp"
	                android:text="@string/reset" />
	            
	        </LinearLayout>
	        
	    </LinearLayout>
	    
	</ScrollView>
	
	<RelativeLayout 
	    android:id="@+id/progress"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/progress_view_background"
	    android:visibility="invisible">
	    
	    <ProgressBar 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        style="@android:style/Widget.ProgressBar" />
	    
	</RelativeLayout>
    
</FrameLayout>