<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
	<LinearLayout 
	    android:id="@+id/main_content"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="15dp">
	
	    <AutoCompleteTextView
	        style="@style/MyEditText"
	        android:id="@+id/searchView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/ic_search"
	        android:drawablePadding="5dp"
	        android:inputType="textCapWords"
	        android:maxLength="255"
	        android:padding="5dp"
	        android:imeOptions="actionSearch" />
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:layout_marginTop="15dp">
	        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="15dp"
	            android:textColor="@color/app_main_color"
	            android:tag="@string/sort_by" />
	        
	        <Spinner
	            android:id="@+id/sortByView"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textColor="@color/app_main_color" />
	        
	    </LinearLayout>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:textColor="@color/app_main_color"
	        android:tag="@string/search_by" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="10dp">
	            
	        <Button
	            style="@style/MyButton"
	            android:id="@+id/searchTitleBtn"
	            android:layout_width="0dp"
	            android:layout_height="@dimen/btn_height"
	            android:layout_weight="1"
	            android:background="@drawable/btn_orange"
	            android:tag="@string/title" />
	        
	        <Button
	            style="@style/MyButton"
	            android:id="@+id/searchAuthorBtn"
	            android:layout_width="0dp"
	            android:layout_height="@dimen/btn_height"
	            android:layout_weight="1"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:background="@drawable/btn_orange"
	            android:tag="@string/author" />
	        
	        <Button
	            style="@style/MyButton"
	            android:id="@+id/searchSubjectBtn"
	            android:layout_width="0dp"
	            android:layout_height="@dimen/btn_height"
	            android:layout_weight="1"
	            android:background="@drawable/btn_orange"
	            android:tag="@string/subject" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="10dp">
	            
	        <Button
	            style="@style/MyButton"
	            android:id="@+id/searchSeriesBtn"
	            android:layout_width="0dp"
	            android:layout_height="@dimen/btn_height"
	            android:layout_weight="1"
	            android:background="@drawable/btn_orange"
	            android:tag="@string/series" />
	        
	        <Button
	            style="@style/MyButton"
	            android:id="@+id/searchAllBtn"
	            android:layout_width="0dp"
	            android:layout_height="@dimen/btn_height"
	            android:layout_weight="1"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:background="@drawable/btn_purple"
	            android:tag="@string/all" />
	        
	        <Button
	            style="@style/MyButton"
	            android:id="@+id/searchIsbnBtn"
	            android:layout_width="0dp"
	            android:layout_height="@dimen/btn_height"
	            android:layout_weight="1"
	            android:background="@drawable/btn_gray"
	            android:tag="@string/isbn" />
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/scanIsbnBtn"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/btn_height"
	        android:layout_marginTop="20dp"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:background="@drawable/btn_green">
	    
		    <TextView
		        style="@style/MyButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:tag="@string/scan_isbn" />
		    
		    <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:src="@drawable/icon_scan_isbn" />
		    
		</LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/browseAuthorBtn"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/btn_height"
	        android:layout_marginTop="10dp"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:background="@drawable/btn_blue">
	    
		    <TextView
		        style="@style/MyButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:tag="@string/browse_by_author" />
		    
		    <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:src="@drawable/icon_browse_by_author" />
		    
		</LinearLayout>
		
	    <LinearLayout 
	        android:id="@+id/browseSubjectBtn"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/btn_height"
	        android:layout_marginTop="10dp"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:background="@drawable/btn_blue">
	    
		    <TextView
		        style="@style/MyButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:tag="@string/browse_by_subject" />
		    
		    <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:src="@drawable/icon_browse_by_subject" />
		    
		</LinearLayout>
	    
	    <LinearLayout 
	        android:id="@+id/browseSeriesBtn"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/btn_height"
	        android:layout_marginTop="10dp"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:background="@drawable/btn_blue">
	    
		    <TextView
		        style="@style/MyButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:tag="@string/browse_by_series" />
		    
		    <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:src="@drawable/icon_browse_by_series" />
		    
		</LinearLayout>
	
	</LinearLayout>
	
	</ScrollView>
	
	<RelativeLayout 
	    android:id="@+id/progress"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/progress_view_background"
	    android:visibility="invisible">
	    
	    <ProgressBar 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        style="@android:style/Widget.ProgressBar" />
	    
	</RelativeLayout>

</FrameLayout>