<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/dialog_background">
    
    <TextView 
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/app_main_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_top_divider" />
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="15dp"
	    android:orientation="vertical">
    
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="25dp"
		    android:orientation="horizontal">
		    
		    <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:tag="@string/title_caption"
				android:textColor="@color/app_main_color" />
		    
		    <TextView 
		        android:id="@+id/title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:maxLength="30"
		        android:maxLines="1"
				android:ellipsize="end"
				android:textColor="@color/app_main_color"
				android:textStyle="bold" />
		    
		</LinearLayout>    
		
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center_horizontal">
	        
	        <Button
		        style="@style/MyButton"
		        android:id="@+id/yesBtn"
		        android:layout_width="0dp"
		        android:layout_height="@dimen/btn_height"
		        android:layout_weight="1"
		        android:layout_marginRight="10dp"
		        android:background="@drawable/btn_orange"
		        android:tag="@string/yes" />
	        
	        <Button
		        style="@style/MyButton"
		        android:id="@+id/noBtn"
		        android:layout_width="0dp"
		        android:layout_height="@dimen/btn_height"
		        android:layout_weight="1"
		        android:layout_marginLeft="10dp"
		        android:background="@drawable/btn_orange"
		        android:tag="@string/no" />
	        
	    </LinearLayout>
	    
	</LinearLayout>

</LinearLayout>